@@ -2,15 +2,11 @@ package com.proftelran.org.lessontwentyseven.homework;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.Random;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 public class HippodromeApp {
 
     public static final int LOOP_LENGTH = 1000;
-    public static final Map<Horse, Long> resultMap = new ConcurrentHashMap<>();
 
     public static void main(String[] args) {
 
@@ -21,8 +17,8 @@ public class HippodromeApp {
             horses.add(new Horse("A" + i, random.nextInt(5)));
         }
 
-        horses.stream().map(horse -> new Thread(horse))
-                .collect(Collectors.toList()).forEach(Thread::start);
+        horses.stream().map(Thread::new)
+                .toList().forEach(Thread::start);
 
 //        List<Thread> threads = new ArrayList<>();
 //        horses.forEach(horse -> threads.add(new Thread(horse)));
